# corso-cpp

./: .env  .gitignore  .tags  CMakeLists.txt  LICENSE  README.md  docker-compose.yml  main.cpp  prototype.cpp  ssh_up.bat
lezione1/: add_one.cpp  es1  es1.cpp  es2  es2.cpp  es3  es3.cpp  lezione.cpp  lezione.md  op  quot  quot.cpp  readme.md  sum  sum.cpp  test.cpp  welcome
lezione10/: deriv  deriv.cpp  derivatives.h  ode  ode.cpp  plot.jl  plot_ode.jl
lezione11/: ode  ode.cpp  plot_error.jl  plot_ode.jl  rk  rk2  rk3  rk_es1.cpp  rk_es2.cpp  rk_es3.cpp
lezione12/: kepler  kepler.cpp  plot_ode.jl
lezione13/: harmonic  harmonic.cpp  kepler.cpp  pendulum.cpp  plot_harmonic.jl
lezione14/: makefile  pendulum  pendulum.cpp  plot_pendulum.jl
lezione15/: POISSON  makefile  plot_poisson.jl  plot_wave.jl  poisson.cpp  test_interact.jl  wave  wave.cpp
lezione16/: 3diag  3diag.cpp  gauss  gauss_elim.cpp  makefile  matrix  matrix.cpp  ode_BVP.cpp  osc  plot_osc.jl  qho.cpp
lezione17/: ell  elliptic.cpp  pell  plot_ell.jl  plot_posson_ell.jl  poisson_ell.cpp
lezione18/: fluido.jl  termo  termo.cpp
lezione2/: arrays  arrays.cpp  factorial  factorial.cpp
lezione3/: babyl  babyl.cpp  quadratic  quadratic.cpp  roundoff  roundoff.cpp  roundoff.md  sin  sin_approx.cpp
lezione4/: es1  es1.cpp  es1.jl  es2  es2.cpp  es2b  es2b.cpp
lezione5/: Si_data.csv  Si_data_2.csv  es3  es3.cpp  es3b  es3b.cpp  es4  es4.cpp  plot_es4.jl  test.csv
lezione6/: es1  es1.cpp  es2  es2.cpp  es3  es3.cpp  es3b  es3b.cpp  plot.jl
lezione7/: es3  es3.cpp  pi  pi.cpp  pi2  pi_plot.cpp  (+3 more)
(+24 files in other folders)
